# HMMDCEncoder

./: CMakeLists.txt  README.md  build_python.sh
App/: BER-Simulator.py  Decode-Noise-simulatormmWave.py  ErrorDecodingFile1.txt  ErrorDecodingFile2.txt  GUITest.py  LaplacianPyramidYUV.py  MDCGenerate.py  OptimizePic.py  Optimize_sequence.py  OptimizerSubGradient.py  PLR-Simulator.py  PLR-SimulatorPattern.py  QP1.csv  QP1.hevc  QP1_n.hevc  QP2.csv  QP2.hevc  QP2_n.hevc  RX_traceQP1.txt  RX_traceQP2.txt  TAppEncoder  TX_traceQP1.txt  TX_traceQP2.txt  alignedPSNR.py  calculateJitterMDC-mmWave.py  calculatejitter-SDC.py  config.py  decodeHEVC.sh  generateQPFile.py  generateQtree.sh  mdcdecode.py  plotMDCSDC.py  qtreeAI.txt  qtreeV.txt  simulate.sh  simulatePattern.sh  testCompression.sh  testDecodeMDC.py  testOptimizerTrustReg  testSalience.py  (+3 more)
Lib/: Manual Launch.txt  Metric.py  Optimizer.py  Quadtreelib.py  Quantlib.py  TAppEncoder  Transform.py  dec265
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HM.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
config/: BasketballDrive.cfg  RondPointYUV420p.cfg  RouteFenetreyuv420p.cfg  encoder_intra_main.cfg  encoder_lowdelay_P_main.cfg
lib/: HEVCInterfaceEncoder.py  MDCDecoderLib.py  NALUnitProcessing.py  Optimizer.py  Transform.py  YUVLib.py
source/: BasketballDrive.cfg
source/App/Parcat/: CMakeLists.txt  parcat.cpp  readme.md
source/App/SEIRemovalApp/: CMakeLists.txt  SEIRemovalApp.cpp  SEIRemovalApp.h  SEIRemovalAppCfg.cpp  SEIRemovalAppCfg.h  seiremovalmain.cpp
source/App/TAppDecoder/: CMakeLists.txt  TAppDecCfg.cpp  (+4 more)
source/Lib/TMDCCommon/: CMakeLists.txt  TMDCQPTable.cpp  TMDCQPTable.hpp
(+228 files in other folders)
